# AllWays-Safe

./: README.md
Code/: README.md
Code/Additonal/: README.md
Code/Additonal/DeviceDriverLED/: Makefile  README.md  led_dd.c  utility.c  utility.h
Code/Additonal/FastDDS/Publisher/: CMakeLists.txt  DDSPublisher.cpp  DDSPublisher.hpp  EmergencyMSG.hpp  EmergencyMSG.idl  EmergencyMSGCdrAux.hpp  EmergencyMSGCdrAux.ipp  emergency_msg_profile.xml  main.cpp
Code/Additonal/FastDDS/Subscriber/: CMakeLists.txt  DDSSubscriber.cpp  DDSSubscriber.hpp  EmergencyMSG.hpp  EmergencyMSG.idl  EmergencyMSGCdrAux.hpp  EmergencyMSGPubSubTypes.cxx  EmergencyMSGPubSubTypes.hpp  EmergencyMSGTypeObjectSupport.cxx  EmergencyMSGTypeObjectSupport.hpp  emergency_msg_profile.xml  main.cpp
Code/Additonal/RESTful_API/: CMakeLists.txt  main.cpp
Code/DeviceDriverPWM/: Makefile  README.md  pwm_dd.c  pwm_dd.h  utility.c  utility.h
Code/GUI/allways-safe/: .env  index.html  package-lock.json  package.json
Code/GUI/allways-safe/src/: App.jsx  index.css
Code/RestAPI/: .env  package-lock.json  package.json  server.js
Code/RestAPI/routes/: getID_rasp.js  getList_rasp.js  patch_rasp.js  post_rasp.js
Code/TrafficControlSystem/: CMakeLists.txt  Mediator.cpp  Mediator.hpp  TrafficControlSystem.cpp  TrafficControlSystem.hpp  main.cpp
Code/TrafficControlSystem/CloudInterface/: CloudInterface.cpp  CloudInterface.hpp
Code/TrafficControlSystem/CppWrapper/: CondVar_CppWrapper.cpp  CppWrapper.hpp  MQueue_CppWrapper.cpp  Mutex_CppWrapper.cpp  Thread_CppWrapper.cpp  Timer_CppWrapper.cpp
Code/TrafficControlSystem/GPIOHandling/: rasp_gpio.cpp  rasp_gpio.hpp
Code/TrafficControlSystem/Messages/: EventsType.hpp  InternalEvent.hpp
Code/TrafficControlSystem/Messages/Components/: DDSEvent.hpp  PedestrianEvent.hpp
Code/TrafficControlSystem/Messages/Components/Cloud/: QueueReceiveCloudTypes.hpp  QueueSendCloudTypes.hpp
Code/TrafficControlSystem/PedestrianSemaphore/: PedestrianSemaphore.cpp  PedestrianSemaphore.hpp
Code/TrafficControlSystem/PedestrianSemaphore/Button/: Button.cpp  Button.hpp
Code/TrafficControlSystem/PedestrianSemaphore/Buzzer/: Buzzer.cpp  Buzzer.hpp  PWM_DeviceDriver.cpp  PWM_DeviceDriver.hpp
Code/TrafficControlSystem/PedestrianSemaphore/LinuxDeviceDriver/: pwm_dd.c  pwm_dd.h  utility.c  utility.h
Code/TrafficControlSystem/PedestrianSemaphore/RFID/: MFRC522.cpp  MFRC522.hpp  SPI_DeviceDriver.cpp  SPI_DeviceDriver.hpp
Code/TrafficControlSystem/Semaphore/: Semaphore.cpp  Semaphore.hpp
Code/TrafficControlSystem/Subscriber/: DDSSubscriber.cpp  DDSSubscriber.hpp  EmergencyMSG.idl  EmergencyMSGCdrAux.hpp  EmergencyMSGTypeObjectSupport.cxx  emergency_msg_profile.xml
Code/TrafficControlSystem/Test/DataValidation/: DataValidation.cpp
Code/TrafficControlSystem/Test/DataValidation/correct_config/: correct_PSEM.json  correct_TSEM.json
Code/TrafficControlSystem/Test/DataValidation/wrong_config/: wrong_PSEM.json  wrong_TSEM.json
Code/TrafficControlSystem/TrafficSemaphore/: TrafficSemaphore.cpp  TrafficSemaphore.hpp
Code/TrafficControlSystem/TrafficStrategy/: Emergency_TrafficStrategy.cpp  Failure_StrategyEmergency.cpp  Normal_TrafficStrategy.cpp  SetUp_TrafficStrategy.cpp  TrafficStrategy.hpp
Code/evcontrolsystem/: CMakeLists.txt  evcontrolsystem.cpp  evcontrolsystem.hpp  main.cpp
Code/evcontrolsystem/Battery/: ADS1115.cpp  ADS1115.hpp  Battery.cpp  Battery.hpp
Code/evcontrolsystem/CloudInterface/: CloudInterface.cpp  CloudInterface.hpp
Code/evcontrolsystem/CppWrapper_pthreads/: CondVar_CppWrapper.cpp  CppWrapper.hpp  MQueue_CppWrapper.cpp  Mutex_CppWrapper.cpp  Thread_CppWrapper.cpp  Timer_CppWrapper.cpp
Code/evcontrolsystem/PWM_DeviceDriver/: PWM_DeviceDriver.cpp  PWM_DeviceDriver.hpp
Code/evcontrolsystem/PWM_DeviceDriver/LinuxDeviceDriver/: Makefile  pwm_dd.c  pwm_dd.h  utility.c  utility.h
Code/evcontrolsystem/Publisher/: DDSPublisher.cpp  DDSPublisher.hpp  EmergencyMSG.hpp  EmergencyMSG.idl  EmergencyMSGCdrAux.ipp  emergency_msg_profile.xml
